# S2Secret

./: .gitignore  README.md  package.json  pnpm-lock.yaml  tailwind.config.ts
src/: app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: api_client.rs  commands.rs  cryptography.rs  http_client.rs  lib.rs  main.rs  s2secret.rs
src/components/: EmergencyAccessGrant.svelte  EmergencyContact.svelte  EmergencyContactDeleteForm.svelte  EmergencyContactForm.svelte  Secret.svelte  SecretCreateForm.svelte  SecretDeleteForm.svelte  SecretForm.svelte  SecretProactiveProtection.svelte
src/routes/: +layout.svelte  +page.svelte
src/routes/(authed)/: +layout.svelte  +layout.ts
src/routes/(authed)/emergency-accesses/: +page.svelte  +page.ts
src/routes/(authed)/emergency-contacts/: +page.svelte  +page.ts
src/routes/(authed)/secrets/: +page.svelte  +page.ts
src/routes/2fa/: +page.svelte
src/routes/authenticated/: +layout.svelte
src/routes/authenticated/secrets/: +page.svelte
src/routes/emergency-access/: +page.svelte
src/routes/emergency-access-2fa/: +page.svelte
src/routes/secrets/: +page.svelte
src/routes/sign-up/: +page.svelte
src/state/: emergency-access.svelte.ts  emergency-contacts.ts  login.svelte.ts  secrets.svelte.ts  user.svelte.ts
