[package]
name = "s2secret"
version = "0.1.0"
description = "Secure password manager based on zero knowledge password authentication and secret sharing schemes"
authors = ["Nicolas Axel Bukovits"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "s2secret_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.5", features = [] }

[dependencies]
tauri = { version = "2.2.5", features = [] }
tauri-plugin-shell = "2.2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
opaque-ke = { version = "3.0.0", features = ["argon2", "serde"] }
rand = "0.8.5"
argon2 = "0.5.3"
tauri-plugin-http = { version = "2", features= ["json"] }
uuid = { version = "1.10.0", features = ["v4", "serde"] }
secrecy = "0.10.3"
tokio = { version = "1.39.3", features = ["full"] }
reqwest-middleware = { version = "0.4.1", features= ["json"] }
async-trait = "0.1"
sharks = { git = "https://github.com/axelnico/sharks.git"}
base64 = "0.22.1"
aes-gcm = "0.10.3"
ciborium = "0.2.2"
coset = "0.3.8"
